--- a/index.html
+++ b/index.html
@@ -8,5 +8,17 @@
   </head>
   <body>
     <!-- Your code here -->
-  </body>
+    <img 
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+    />
+    <img
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="My image test" 
+    /> 
+    <img
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="My image test"
+      title="African Lion" 
+    /> 
+    </body>
 </html>
